[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/save_data.gd" type="Script" id=2]
[ext_resource path="res://asset/reset.tres" type="Theme" id=3]
[ext_resource path="res://asset/prova_theme.tres" type="Theme" id=4]
[ext_resource path="res://asset/file_dialog.tres" type="Theme" id=5]
[ext_resource path="res://scenes/exit_scene.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
extra_spacing_top = 3
extra_spacing_bottom = 3
extra_spacing_char = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="save_data" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 8.0
margin_right = 2048.0
margin_bottom = 1208.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 2048.0
margin_bottom = 1208.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 2048.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CenterContainer"]
visible = false
margin_left = 874.0
margin_top = 63.0
margin_right = 1174.0
margin_bottom = 134.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "team.save"
expand_to_text_length = true
caret_blink = true

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 2048.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ok_internal" type="Button" parent="VBoxContainer/CenterContainer3"]
margin_left = 395.0
margin_top = 64.0
margin_right = 1653.0
margin_bottom = 133.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
text = " Salva in formato interno i nuovi giocatori "

[node name="CenterContainer6" type="CenterContainer" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 2048.0
margin_bottom = 602.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CenterContainer6"]
visible = false
margin_left = 874.0
margin_top = 63.0
margin_right = 1174.0
margin_bottom = 134.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "team.save"
expand_to_text_length = true
caret_blink = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 606.0
margin_right = 2048.0
margin_bottom = 804.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_left = 51.0
margin_top = 74.0
margin_right = 1997.0
margin_bottom = 123.0
theme = ExtResource( 3 )
text = "Oppure: scegli una cartella e assegna un nome al file con i dati sulla squadra (formato json)"

[node name="CenterContainer5" type="CenterContainer" parent="VBoxContainer"]
margin_top = 808.0
margin_right = 2048.0
margin_bottom = 1006.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ok_Button" type="Button" parent="VBoxContainer/CenterContainer5"]
margin_left = 563.0
margin_top = 64.0
margin_right = 1485.0
margin_bottom = 133.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
text = " Salva in json i nuovi giocatori "

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 1010.0
margin_right = 2048.0
margin_bottom = 1208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="goback" type="Button" parent="VBoxContainer/CenterContainer4"]
margin_left = 778.0
margin_top = 71.0
margin_right = 1269.0
margin_bottom = 126.0
theme = ExtResource( 4 )
text = "Vai a fare le squadre"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 1200.0
margin_bottom = 350.0
rect_min_size = Vector2( 400, 140 )
theme = ExtResource( 5 )
window_title = "Salva un file"
resizable = true
access = 2
show_hidden_files = true

[node name="exit_scene" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 1100 )
scale = Vector2( 0.5, 0.5 )

[connection signal="button_up" from="VBoxContainer/CenterContainer3/ok_internal" to="." method="_on_ok_internal_button_up"]
[connection signal="button_up" from="VBoxContainer/CenterContainer5/ok_Button" to="." method="_on_ok_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/CenterContainer4/goback" to="." method="_on_goback_button_up"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
